#45 Add People API
